2008-02-01  Release Manager

	* GCC 4.2.3 released.

2007-10-25  Thomas Koenig  <tkoenig@gcc.gnu.org>
	    Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/32298
	PR fortran/31726
	PR fortran/33354
	Backport from trunk
	* trans-intrinsic.c (gfc_conv_intrinsic_minmaxloc): Calculate
	the offset between the loop counter and the position as
	defined. Add the offset within the loop so that the mask acts
	correctly.  Do not advance the location on the basis that it
	is zero.

2007-10-07  Release Manager

	* GCC 4.2.2 released.

2007-08-29  Nick Clifton  <nickc@redhat.com>

	* arith.c: Change copyright header to refer to version 3 of the
	GNU General Public License and to point readers at the COPYING3
	file and the FSF's license web page.
	* openmp.c, interface.c, intrinsic.c, trans-array.c, trans-expr.c,
	symbol.c, intrinsic.h, decl.c, trans-array.h, matchexp.c,
	dump-parse-tree.c, trans-common.c, array.c, Make-lang.in,
	trans-openmp.c, gfortran.h, error.c, lang.opt, data.c,
	trans-const.c, trans-stmt.c, expr.c, trans-const.h, trans-stmt.h,
	module.c, trans.c, scanner.c, trans-types.c, trans.h,
	gfortranspec.c, trans-types.h, lang-specs.h, io.c, bbt.c,
	resolve.c, f95-lang.c, st.c, iresolve.c, match.c, trans-decl.c,
	trans-io.c, match.h, parse.c, arith.h, check.c, dependency.c,
	parse.h, types.def, convert.c, dependency.h, primary.c,
	trans-intrinsic.c, options.c, misc.c, simplify.c: Likewise.

2007-07-29  Daniel Franke  <franke.daniel@gmail.com>

	Backport from trunk:
	2007-07-29  Daniel Franke  <franke.daniel@gmail.com>
	* invoke.texi: Removed -w from option summary.

	2007-07-29  Daniel Franke  <franke.daniel@gmail.com>
	PR fortran/32879
	* intrinsic.texi (IRAND, RAND, RANDOM_NUMBER): Document
	algorithm used for random number generator.

	2007-07-13  Daniel Franke  <franke.daniel@gmail.com>
	* invoke.texi: Unified upper- and lower-case in menus.
	(-w, -W): Removed, documented by gcc.
	* intrinsic.texi: Unified Class-section entries, added