@@ -1,3 +1,8 @@
+2008-02-04  Daniel Franke  <franke.daniel@gmail.com>
+
+	PR fortran/34661
+	* gfortran.dg/where_operator_assign_4.f90: New test.
+
 2008-02-04  Andreas Krebbel  <krebbel1@de.ibm.com>
 
 	* gcc.dg/tf_to_di-1.c: New testcase.
